--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-remote_theme: pages-themes/leap-day@v0.2.0
+# remote_theme: pages-themes/leap-day@v0.2.0
+remote_theme: "mmistakes/minimal-mistakes@latest"
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 #
 custom_css: "/custom.css" 
 plugins:
   - jekyll-assets
+
