--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,12 @@
 # remote_theme: pages-themes/leap-day@v0.2.0
-remote_theme: "mmistakes/minimal-mistakes@latest"
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
 #
 custom_css: "/custom.css" 
 plugins:
   - jekyll-assets
+
+
+
 
