--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# remote_theme: pages-themes/leap-day@v0.2.0
-remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+remote_theme: pages-themes/leap-day@v0.2.0
+# remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 plugins:
   - jekyll-remote-theme
 #
