--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,6 @@ remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-remote-theme
 #
-custom_css: "custom.css" 
-plugins:
-  - jekyll-remote-theme
-  - jekyll-include-cache
-  - jekyll-assets
+custom_css: "/assets/css/style.scss" 
 
 
