--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ plugins:
 #
 custom_css: "/assets/css/style.scss" 
 
-
+title: [Certificates | qualification portfolio | theme]
+description: [Certificates | qualification portfolio | description]
