--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ plugins:
 #
 custom_css: "/assets/css/style.scss" 
 
-title: [Certificates | qualification portfolio | theme]
-description: [Certificates | qualification portfolio | description]
+title: Damian's github page
+description: [Damian Bednarczyk]
